Revise `ObjectGraphUtils`
- Use `pollLast()` instead of `pollFirst()` for better performance
- Add object graph operations statistics to resource summary
- Add logging of object graph operations via `--log.smalltalk.object-graph.level=FINE`